<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="perfil"
            type="cat.copernic.veterinaryapp.modelos.Perfil" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ViewUser">

            <!-- TODO: Update blank fragment layout -->

            <ImageView
                android:id="@+id/img_perfil_usr"
                android:layout_width="133dp"
                android:layout_height="122dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/fotoPerf"
                android:src="@drawable/ic_menu_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lvlRol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/EditTextUsuari"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rol" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_direcc"
                app:layout_constraintStart_toStartOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_nom"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_cognoms"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_dni"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_tlfn"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_fechaNac"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/txt_usr_usr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_perfil_usr" />

            <EditText
                android:id="@+id/EditTextUsuari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintUser"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:enabled="false"/>

            <EditText
                android:id="@+id/EditTextNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintNom"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/EditTextCognoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintCognoms"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/EditTextDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:enabled="false"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintDni"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/EditTextTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintTelefon"
                android:inputType="phone"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/EditTextDataN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/campo_personalizado"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/hintDataN"
                android:inputType="date"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/EditTextDir"
                android:layout_width="wrap_content"
                android:layout_height="137dp"
                android:background="@drawable/campo_personalizado"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hintDireccio"
                android:inputType="textMultiLine"
                android:padding="5dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="@+id/EditTextDataN"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="822dp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="168dp"
                tools:visibility="visible" />

            <Button
                android:id="@+id/buttonChngPass"
                android:layout_width="152dp"
                android:layout_height="63dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/boton_personalizado"
                android:text="@string/btn_chng_pass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EditTextDir" />

            <Button
                android:id="@+id/button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/boton_personalizado"
                android:text="@string/txtBtn_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EditTextDir" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>