<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistreActivity">

    <EditText
        android:id="@+id/idEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idContrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/idEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idEmail"
        app:layout_constraintTop_toBottomOf="@+id/idEmail" />

    <EditText
        android:id="@+id/idContraConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/contraConfirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/idContrasenya"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/idContrasenya" />

    <Button
        android:id="@+id/idRegistrarseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/botoRegistre"
        app:layout_constraintEnd_toEndOf="@+id/idContraConfirm"
        app:layout_constraintStart_toStartOf="@+id/idContraConfirm"
        app:layout_constraintTop_toBottomOf="@+id/idContraConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>