<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_client"
    app:startDestination="@id/homeUser">
    <fragment
        android:id="@+id/homeUser"
        android:name="cat.copernic.veterinaryapp.homeUser"
        android:label="@string/nombre_home_admin"
        tools:layout="@layout/fragment_home_user">
        <action
            android:id="@+id/action_homeUser_to_fragment_CliVerCitas"
            app:destination="@id/fragment_CliVerCitas" />
        <action
            android:id="@+id/action_homeUser_to_fragment_CliGestionMascotas2"
            app:destination="@id/fragment_CliGestionMascotas2" />
        <action
            android:id="@+id/action_homeUser_to_fragment_Editar_Mascota"
            app:destination="@id/fragment_Editar_Mascota" />
    </fragment>
    <fragment
        android:id="@+id/fragment_CliGestionMascotas2"
        android:name="cat.copernic.veterinaryapp.Fragment_CliGestionMascotas"
        android:label="@string/crearMascota"
        tools:layout="@layout/fragment__cli_gestion_mascotas" />
    <fragment
        android:id="@+id/fragment_CliPedirCita"
        android:name="cat.copernic.veterinaryapp.Fragment_CliPedirCita"
        android:label="@string/demanarCita"
        tools:layout="@layout/fragment__cli_pedir_cita" />
    <fragment
        android:id="@+id/fragment_CliVerCitas"
        android:name="cat.copernic.veterinaryapp.Fragment_CliVerCitas"
        android:label="Veure cites"
        tools:layout="@layout/fragment__cli_ver_citas" />
    <fragment
        android:id="@+id/fragment_PrincipalCliente"
        android:name="cat.copernic.veterinaryapp.Fragment_PrincipalCliente"
        android:label="fragment__principal_cliente"
        tools:layout="@layout/fragment__principal_cliente" />
    <activity
        android:id="@+id/cierreSesion"
        android:name="cat.copernic.veterinaryapp.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/fragmentVerFAQ"
        android:name="cat.copernic.veterinaryapp.FragmentVerFAQ"
        android:label="Verue FAQS"
        tools:layout="@layout/fragment_ver_f_a_q" />
    <fragment
        android:id="@+id/viewUser2"
        android:name="cat.copernic.veterinaryapp.ViewUser"
        android:label="@string/MeuPerf"
        tools:layout="@layout/fragment_view_user" />
    <fragment
        android:id="@+id/fragment_Editar_Mascota"
        android:name="cat.copernic.veterinaryapp.Fragment_Editar_Mascota"
        android:label="Modificar mascota"
        tools:layout="@layout/fragment__editar__mascota">
        <argument
            android:name="chipMascota"
            app:argType="string" />
    </fragment>
</navigation>